After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773799 - GtkLevelBar doesn't update blocks on discrete mode
GtkLevelBar doesn't update blocks on discrete mode
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-11-02 03:00 UTC by Georges Basile Stavracas Neto
Modified: 2016-11-04 17:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
levelbar: update css nodes even when no offset value is found (2.95 KB, patch)
2016-11-02 03:00 UTC, Georges Basile Stavracas Neto
none Details | Review

Description Georges Basile Stavracas Neto 2016-11-02 03:00:38 UTC
See patch below. Please, cherry-pick to gnome-3-22 if possible.
Comment 1 Georges Basile Stavracas Neto 2016-11-02 03:00:42 UTC
Created attachment 338922 [details] [review]
levelbar: update css nodes even when no offset value is found

GtkLevelBar supports adding custom offsets as style classes, and they
are applied whenever the :value property matches. The current code,
however, only updates any CSS nodes when an offset is found, causing
it to not update when a discrete value changes but no custom offset
is added.

Fix that by always updating the CSS nodes.